04_services/minio/base/deployment.yaml
---
# Source: minio/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 0
  template:
    metadata:
      name: minio
      annotations:
        checksum/secrets: 2aa697554b0d54f59b931958ed34337deea90b543ccf2a9f3afbb94431dc4f7d
        checksum/config: 5bd2ab1c721b28af7baf9c6783054ffd8364f4206880b591b55817d2231f6414
    spec:
      serviceAccountName: "default"
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: minio
          image: "minio/minio:RELEASE.2021-02-14T04-01-33Z"
          imagePullPolicy: Always
          command:
            - "/bin/sh"
            - "-ce"
            - "/usr/bin/docker-entrypoint.sh minio -S /etc/minio/certs/ server /export"
          volumeMounts:
            - name: export
              mountPath: /export            
          ports:
            - name: http
              containerPort: 9000
          resources:
            requests:
              memory: 4Gi
      volumes:
        - name: export
          persistentVolumeClaim:
            claimName: minio
        - name: minio-user
          secret:
            secretName: minio
